# fastqe_rust_webgpu

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: rust.yml  static.yml
pages/: index.html
scripts/: emcc_build.sh
src/: fastqe_map.rs  main.rs
