[package]
name = "fastqe"
version = "0.1.0"
authors = ["Andrew Lonsdale <andrew.lonsdale@lonsbio.com.au>"]


[lib]
crate-type = ["cdylib","lib"]
path = "src/main.rs"
link-args = ["-s", "ZLIB=1"]


[dependencies]
bytecount = "0.6.3"
bio = "1.1.0"
argparse = "*"
log = "*"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "*"
js-sys = "*"
emojis = "0.6.1"
clap = "4.4.10"
flate2 = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console'
]
